# rush

./: Cargo.toml  README.md
config/: rushrc
src/: completion.rs  config.rs  grammar.rustpeg  interpeter.rs  interpreter.rs  lib.rs  main.rs  parser.rs  prompt.rs  script.rs  shellstate.rs
src/builtins/: alias.rs  bools.rs  cd.rs  exit.rs  export.rs  mod.rs  read.rs  source.rs
