[package]
name = "rush"
version = "0.0.2"
authors = ["Ben Goldberg <jediben97@gmail.com>"]
build = "build.rs"

[lib]
doc = true
name = "rush"
path = "src/lib.rs"

[dependencies]
libc = "0.2.32"
nix = "0.9.0"
rustyline = "3.0.0"
dirs = "1.0"
gethostname = "0.2.0"
clap = "2.32.0"
glob = "0.3.0"

[build-dependencies]
peg = "0.5"

[profile.release]
opt-level = 3
rpath = false
lto = true
debug-assertions = false
